# bayes-climsim-eval

./: .cruft.json  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  create-env-file.sh  environment.yml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
data/: catalog-filter-historical.csv  catalog-filter-historicalGHG.csv  catalog-filter-historicalNat.csv  catalog-filter-piControl.csv  obs-intake.yaml
docs/: conf.py  example.md  index.md
docs/_config/themes/: furo.py  sphinx_immaterial.py
docsrc/: Makefile
docsrc/source/: conf.py  index.rst
notebooks/: jupyter_startup.ipy
notebooks/exploratory/: 00_catalog-filter.ipynb
reports/book/: _config.yml  index.md
scripts/: 01-test.py  01_data-preprocessing.py  02_plot-timeseries.py  03_plot-multivariate-pdfs.py  04_plot-decision-probabilities.py
src/: __init__.py  bayes.py  bayes_eval.py  submodule.py
src/bayes_climsim_eval/: __init__.py  bayes.py  bayes_eval.py  cli.py  data_projection.py  submodule.py
src/bayes_climsim_eval/core/: __init__.py  utils.py
src/tests/: conftest.py  test_bayes.py  test_submodule.py
tests/: conftest.py  test_bayes.py  test_submodule.py
