[build-system]
requires = ["setuptools @ git+https://github.com/pypa/setuptools.git@main"]


[project]
name = "bayes_climsim_eval"
description = "Evaluation of climate model simulations (e.g. from CMIP) with a Bayesian approach"
authors = [
  {name = "Markus Ritschel", email = "git@markusritschel.de"},
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "dask>=2026.3.0",
    "dotenv>=0.9.9",
    "fire>=0.7.1",
    "intake>=2.0.9",
    "intake-esm>=2025.12.12",
    "intake-xarray>=2.0.0",
    "matplotlib>=3.10.9",
    "my-code-base",
    "netcdf4>=1.7.4",
    "pandas>=3.0.2",
    "pyinterp>=2.0.0",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
    "xarray>=2026.4.0",
]


[tool.jupytext]
formats = "ipynb,py:percent,md:myst"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "src",
]
addopts = [
    "--import-mode=importlib",
    "-ra -q"
]


[tool.flake8]
max-line-length = 80
max-complexity = 10

[tool.uv.sources]
my-code-base = { git = "https://github.com/markusritschel/my-code-base.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "xesmf>=0.9.2",  # Optional faster backend for regridding
]
