[project]
name = "bayes_climsim_eval"
version = "0.1.0"
description = "Evaluation of climate model simulations (e.g. from CMIP) with a Bayesian approach"
authors = [
  {name = "Markus Ritschel", email = "git@markusritschel.de"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.10"
dependencies = [
  "click",
  "colorama",
  "dask",
  "Deprecated",
  "docopt",
  "ipykernel",
  "ipython",
  "ipywidgets",
  "jupytext",
  "jupyterbook-latex",
  "jupyterlab",
  "jupyternotify",
  "jupytext",
  "markdown",
  "matplotlib",
  "mystmd",
  "nodejs",
  "numpy",
  "pandas",
  "pandoc",
  "python-dotenv",
  "rich",
  "tqdm",
  "typer",
  "xarray"
]


[project.scripts]
bayes_climsim_eval = "bayes_climsim_eval.cli:app"


[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  "pre-commit"
]
lint = [
  "flake8",
  "isort",
  "ruff",
  "ty",
]
test = [
  "pytest",
  "pytest-cov",
  "safety",
]
docs = [
"furo",
  "jupyter-book",
  "jupyterbook-latex",
  "linkify-it-py",
  "lxml_html_clean",
  "myst-parser",
  "nbsphinx",
  "pydata-sphinx-theme",
  "rinohtype",
  "sphinx",
  "sphinx-autoapi",
  "sphinx-autobuild",
  "sphinx-autodoc-defaultargs",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme",
  "sphinx-comments",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-immaterial",
  "sphinx-issues",
  "sphinx-rtd-theme",
  "sphinx-tabs",
  "sphinx-toolbox",
  "sphinxcontrib-apidoc",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-htmlhelp",
  "sphinxcontrib-images",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-napoleon",

]


[build-system]
requires = ["uv_build>=0.11.31,<0.12.0"]
build-backend = "uv_build"



[tool.jupytext]
formats = "ipynb,py:percent,md:myst"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests",
  "src",
]
addopts = [
  "--doctest-modules",
  "--doctest-continue-on-failure",
  "-ra -v",
  "--cov=./src",
  "--cov-report=xml",
  "--cov-report=html",
  "--cov-report=term-missing"
]


[tool.uv]
package = true


[tool.cruft]
skip = [
  ".git/", 
  "docs/**/*.md",
  "tests", 
  "README.md"
]
